implement api gatway service and change security accordingly